# python-casacore

./: .gitignore  .travis.yml  CMakeLists.txt  setup.py  travis-deps.sh
.travis/: before_install.sh  install.sh
casacore/images/: image.py
src/: fit.cc  fitsconverter.cpp  fitsconverter.h  fitting.cc  fitting.h  functional.cc  functionals.cc  functionals.h  images.cc  pyimages.cc  pyimages.h  pymeas.cc  pymeasures.cc  pymeasures.h  pyms.cc  pytable.cc  pytableindex.cc  pytableiter.cc  pytablerow.cc  quanta.cc  quanta.h  quantamath.cc  quantity.cc  quantvec.cc  tables.cc  tables.h
tests/: test_image.py  test_table.py  tfitting.run  tfunctionals.run  timage.run  tmeasures.run  tquanta.run  ttable.run  tutil.run
